--- a/Calendar/calendar-payments.mdx
+++ b/Calendar/calendar-payments.mdx
@@ -13,8 +13,7 @@ Calendar Payments are now possible when booking an appointment. It allows the lo
 
 2. Add the payment gateways first from your sub-account by going to the  **Payments Tab**  >  **Integrations**
 
-**Please Note**:
->If you connect multiple gateways, you will see a dropdown to select your default payment gateway. Only the **DEFAULT PAYMENT GATEWAY** will be used to collect payments. So if you chose Stripe then it will only collect payments through Stripe.
+**Please Note**: If you connect multiple gateways, you will see a dropdown to select your default payment gateway. Only the **DEFAULT PAYMENT GATEWAY** will be used to collect payments. So if you chose Stripe then it will only collect payments through Stripe.
 
 3. Now, go to Calendar Settings.
 
@@ -31,8 +30,7 @@ Once enabled, these new form fields would appear:
 2.  **Description**
 3.  **Payment mode**  (Test or Live)
 
-**Please Note**:
->Payments DOES NOT WORK for calendars with recurring appointments enabled.
+**Please Note**: Payments DOES NOT WORK for calendars with recurring appointments enabled.
 
 **REMEMBER!**  If you don't see the Payment Options like on the screenshot below, it's because you haven't integrated a payment gateway yet or the calendar is a calendar for recurring appointments. Review the steps above to activate Payment Options for Calendars.
 
