--- a/Calendar/calendar-sync-option-explained.mdx
+++ b/Calendar/calendar-sync-option-explained.mdx
@@ -20,11 +20,11 @@ After you select the default calendar, the Allow Trigger option will show up and
 
 [Video Placeholder]
 
-#### All HL appointments will still be pushed to the linked Google calendar no matter what the sync option is.
+All HL appointments will still be pushed to the linked Google calendar no matter what the sync option is.
 
-#### The behavior for two-way sync and disable trigger would pull the guests in the Google events and add them to Monstro.
+The behavior for two-way sync and disable trigger would pull the guests in the Google events and add them to Monstro.
 
-#### Smart sync would pull the guests in the Google events and add them to Monstro if we found that they are already a lead with the same email in Monstro.
+Smart sync would pull the guests in the Google events and add them to Monstro if we found that they are already a lead with the same email in Monstro.
 
 ### Calendar Sync Options:
 
