--- a/Calendar/calendar-widget-customization.mdx
+++ b/Calendar/calendar-widget-customization.mdx
@@ -50,7 +50,7 @@ Here, you have the freedom to tailor your calendar widget to suit your preferenc
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155014008386/original/1VCnPDtft7VclBxvCMTAZoZIjroZE_xmhw.png?1701336017)
 
-## Frequently Asked Questions
+### Frequently Asked Questions
 
 **Q: Which calendars support customization?**
 
@@ -79,6 +79,6 @@ Logo Removal:
 Customizations Tab:
 -   Disable the "Allow Select Staff" option from the Customizations tab.
 
-## Pro Tip
+### Pro Tip
 
 For the best visual results, we recommend selecting contrasting primary and background colors. Striking a balance between light and dark colors often yields the most aesthetically pleasing outcomes. Experiment with combinations until you find the perfect look for your customized calendar widget.
