--- a/Calendar/how-to-configure-staff-member-selection-in-round-robin-calendars.mdx
+++ b/Calendar/how-to-configure-staff-member-selection-in-round-robin-calendars.mdx
@@ -5,7 +5,7 @@ description: "This function lets your clients select their preferred staff membe
 
 Our booking widget includes a popular feature: Staff Member Selection. This function lets your clients select their preferred staff member when making appointments, offering a personalized touch to their booking experience.
 
-## **What is the Staff Member Selection feature in Round Robin Calendars?**
+**What is the Staff Member Selection feature in Round Robin Calendars?**
 
 The "Staff Member Selection" feature significantly enhances your booking system, specifically designed to increase the flexibility and personalization of your service offerings.
 
@@ -17,7 +17,7 @@ This feature has been carefully designed to accommodate scenarios where a select
 
 Moreover, it fully supports the rescheduling of appointments. During this process, the user is shown the staff selection again, allowing them to either stick with their original choice or opt for a different staff member.
 
-### **What are some practical usage cases for this feature?**
+**What are some practical usage cases for this feature?**
 
 Here are some usage cases that highlight the versatility and potential benefits of the "Staff Member Selection" feature:
 
@@ -33,7 +33,7 @@ Here are some usage cases that highlight the versatility and potential benefits 
 
 **Home Services:** In this industry, trust plays a vital role. If customers have had a good experience with a particular technician or professional, they might prefer the same person for future services. This feature allows customers to select their preferred professional, improving customer satisfaction and trust.
 
-### **What are some notable benefits of this feature?**
+**What are some notable benefits of this feature?**
 
 Here are some practical benefits of the "Staff Member Selection" feature:
 
