--- a/Calendar/how-to-create-round-robin-calendar.mdx
+++ b/Calendar/how-to-create-round-robin-calendar.mdx
@@ -26,10 +26,10 @@ Empower your team with Round Robin events, offering flexibility for invitees to 
 
 **Step 3: Distribution Logic**
 
--   **You can configure Round Robin automated meeting assignments in two ways:**
+-   You can configure Round Robin automated meeting assignments in two ways:
     
-    -   **Optimize for availability**
+    -   Optimize for availability
         
-    -   **Optimize for equal distribution**
+    -   Optimize for equal distribution
         
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155013391193/original/FyuzM6wddDapABW71JUZ6CY7AaXGEYG8yA.png?1700716545)
