--- a/Calendar/how-to-set-up-a-calendar-for-classes.mdx
+++ b/Calendar/how-to-set-up-a-calendar-for-classes.mdx
@@ -88,7 +88,7 @@ For example, if you set the maximum number of seats per slot to 10, then up to 1
 
 You can choose up to a maximum of 9,999 attendees in a single slot; however, if you use a conferencing tool, the tool may have a different maximum attendees limit. For example, Zoom offers a maximum of 500 attendees for certain licenses. specific
 
-## Cancellation and Rescheduling
+### Cancellation and Rescheduling
 
 To cancel a class booking, open the appointment and click  **"Cancel All."**  To reschedule the meeting, click "**Reschedule All,"**  which would reschedule the appointment for all the attendees.
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288875998/original/BZhPs5V9nOruTot-Ps0Dc6I_vtEIB83gsQ.png?1679569846)
@@ -97,27 +97,26 @@ To cancel or reschedule the appointment for a particular attendee, click on the 
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288876324/original/mUN4rPbXaVOwzx0WHVpMbERYy5sMjMuVBw.png?1679569923)
 
-**Please Note**
->In case you have third-party calendars like Google Calendar or Outlook integrated with the CRM's calendar then in that case, the class booking would show each appointment separately in your   Google or Outlook calendar.   
+**Please Note** In case you have third-party calendars like Google Calendar or Outlook integrated with the CRM's calendar then in that case, the class booking would show each appointment separately in your   Google or Outlook calendar.   
   
->**Example**: If you have created a class booking with a capacity of 5 attendees then on the Google or Outlook calendar they would appear as 5 separate events at the same time.   
+**Example**: If you have created a class booking with a capacity of 5 attendees then on the Google or Outlook calendar they would appear as 5 separate events at the same time.   
   
->The meeting location for Class Booking, as of now is restricted to Custom. This would be removed shortly.
+The meeting location for Class Booking, as of now is restricted to Custom. This would be removed shortly.
 
 ## FAQs
 
-### Question: How can I cancel or reschedule a class appointment?
+**Question: How can I cancel or reschedule a class appointment?**
 
 Answer: To cancel or reschedule the class booking, you can go to calendars, click on the class booking you want to modify, and you able to see the option to edit/change the appointment.,
 
-### Question: Can I cancel or reschedule a class appointment for a single attendee?
+**Question: Can I cancel or reschedule a class appointment for a single attendee?**
 
 Answer: Yes, for class appointments, you can click the options menu next to the contact, where you can see the option to cancel or reschedule the appointment for specific contacts.,
 
-### Question: Can I book a class appointment with contacts directly?
+**Question: Can I book a class appointment with contacts directly?**
 
 Answer: Yes, you can do that; click on the "book appointment" button and select the contact you want to book the appointment with. Then select the calendar (choose the class booking calendar here), select the slot, and then proceed to book the appointment. to select
 
-### Question: Can attendees cancel/reschedule a Class Booking appointment?
+**Question: Can attendees cancel/reschedule a Class Booking appointment?**
 
 Answer: To allow attendees to cancel/reschedule the class booking appointment, enable the option for "Allow Cancellation" and "Allow Reschedule" in the Confirmation Tab in Calendar Settings.
