--- a/Calendar/understanding-calendar-availability-settings.mdx
+++ b/Calendar/understanding-calendar-availability-settings.mdx
@@ -60,44 +60,44 @@ Let's look at advanced usage scenarios for each calendar setting:
 
 Remember, these settings can all be adjusted to best suit your needs and work style. They're powerful tools to help you manage your time more effectively.
 
-## FAQs
+### FAQs
 
-### Q: Can I set different buffer times for different types of appointments in my calendar?
+Q: Can I set different buffer times for different types of appointments in my calendar?
 
 A: The Buffer setting applies universally to all appointments in your calendar. If you need different buffer times, consider creating separate calendars for different types of appointments, each with its own buffer time.
 
-### Q: Can I override the Slot Interval for specific days or times in my calendar?
+Q: Can I override the Slot Interval for specific days or times in my calendar?
 
 A: The Slot Interval applies consistently across all your available hours and days. If you require a unique interval for a specific day or time, consider creating a separate calendar for that period with its settings.
 
-### Q: How do the 'Appointments per Slot' setting interact with the 'Slot Interval' setting in my calendar?
+Q: How do the 'Appointments per Slot' setting interact with the 'Slot Interval' setting in my calendar?
 
 A: The 'Appointments per Slot' setting determines how many appointments can be booked for each slot, while the 'Slot Interval' determines how often these slots occur. If 'Appointments per Slot' is set to '2' and your 'Slot Interval' is every 30 minutes, two appointments can be booked every 30 minutes.
 
-### Q: Can the 'Appointments per Day' setting limit appointments across multiple calendars?
+Q: Can the 'Appointments per Day' setting limit appointments across multiple calendars?
 
 A: The 'Appointments per Day' setting is specific to each calendar. If you wish to limit appointments across multiple calendars, you must manage this manually by tracking the total number of appointments across all your calendars.
 
-### Q: What happens if I change the 'Minimum Scheduling Notice' while there are pending appointments in my calendar?
+Q: What happens if I change the 'Minimum Scheduling Notice' while there are pending appointments in my calendar?
 
 A: Changes to the 'Minimum Scheduling Notice' setting won't affect existing appointments but will apply to new ones. For example, if you change the notice from 24 hours to 48 hours, any appointments already scheduled within the next 48 hours will remain, but new appointments will require at least 48 hours' notice.
 
-### Q: Can I set the 'Date Range' for different lengths based on the appointment type in my calendar?
+Q: Can I set the 'Date Range' for different lengths based on the appointment type in my calendar?
 
 A: The 'Date Range' is a universal setting for your calendar. If you need different ranges for different types of appointments, consider creating separate calendars, each with its date range setting.
 
-### Q: Can I have overlapping appointments if my 'Appointments per Slot' setting allows multiple bookings?
+Q: Can I have overlapping appointments if my 'Appointments per Slot' setting allows multiple bookings?
 
 A: Yes, if your 'Appointments per Slot' is set to more than one, multiple individuals can book the same time slot, effectively creating overlapping appointments.
 
-### Q: What happens if I reduce my 'Office Hours' but appointments are already scheduled outside these hours in my calendar?
+Q: What happens if I reduce my 'Office Hours' but appointments are already scheduled outside these hours in my calendar?
 
 A: Existing appointments outside the new office hours will typically remain as scheduled. However, future bookings will only be allowed within the updated office hours.
 
-### Q: How does changing the 'Slot Duration' affect existing appointments in my calendar?
+Q: How does changing the 'Slot Duration' affect existing appointments in my calendar?
 
 A: Changing the 'Slot Duration' will not affect existing appointments; it will only apply to new ones. For example, if you change the duration from 30 to 60 minutes, any existing 30-minute appointments will remain as scheduled.
 
-### Q: Can I use the 'Buffer' setting to account for travel time between appointments in my calendar?
+Q: Can I use the 'Buffer' setting to account for travel time between appointments in my calendar?
 
 A: Absolutely. If you're scheduling in-person appointments in different locations, you can use the 'Buffer' setting to ensure you have enough time to travel from one location to another.
