--- a/Contacts/how-to-bulk-export-contacts.mdx
+++ b/Contacts/how-to-bulk-export-contacts.mdx
@@ -54,9 +54,9 @@ Here are a few good usage cases for this feature and their benefits:
 -   Easy restoration of contact information
 -   Increased data security and peace of mind
 
-## How to export contacts?
+### How to export contacts?
 
-[Video Place Holder https://www.loom.com/share/bff1d11d86e441a89c940fd473a8e429?sid=105d8f21-6797-406c-85eb-51fa2e1b4cb9]
+[Video Place Holder]
 
 **Please Note:**
 
@@ -92,8 +92,7 @@ To select all contacts on a page or the entire list, use the corresponding check
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48294833317/original/7sC-wusT2uOE-Uh6LwvBPnZCaHMAdWu3_A.gif?1682610706)
 
-**Please Note:**
->When exporting contacts, only the most recent note (up to 255 characters) is included for each contact. This keeps the exported .csv file size manageable and focuses on the latest information. In the .csv file, the newest note appears as a separate column, but older or longer notes are not included in the export.  
+**Please Note:** When exporting contacts, only the most recent note (up to 255 characters) is included for each contact. This keeps the exported .csv file size manageable and focuses on the latest information. In the .csv file, the newest note appears as a separate column, but older or longer notes are not included in the export.  
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48294844359/original/TsF2Vm0dwH9Kug8E0qTlsEPXEyS7cDlDRg.png?1682614208)
 
@@ -106,8 +105,7 @@ Check or uncheck boxes to include or exclude specific columns in the export.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48294832924/original/hM3qjh8Zn2JfXBEbNXai3KMYjA9p7vVFZA.gif?1682610570)
 
-**Please Note**
->In the Contact Export section, if users have selected the email option in the smartlist column, a new column named “Additional Email” will automatically appear in the exported CSV file. This column will contain all the additional emails arranged in one column and separated by commas(,).
+**Please Note** In the Contact Export section, if users have selected the email option in the smartlist column, a new column named “Additional Email” will automatically appear in the exported CSV file. This column will contain all the additional emails arranged in one column and separated by commas(,).
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48298718589/original/1cTqWMUJv_K4x9CYO8KAnTmNvYKgVnt7dA.png?1684776707)
 
