--- a/Emails/list-of-all-outgoing-system-generated-emails.mdx
+++ b/Emails/list-of-all-outgoing-system-generated-emails.mdx
@@ -24,15 +24,13 @@ The **New Appointment Request** notifications are sent from the  Unassigned Cale
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48253316570/original/75I9IfgNAJbDy9tDhOm2aqsOA__d6jBTkA.png?1664264542)
   
-**Please Note:**
->If the calendar settings for auto confirmation and send appointment alert emails is enabled, appointment owners will receive appointment request emails. The developers are working on deploying a fix schedule for the next calendar update.
+**Please Note:** If the calendar settings for auto confirmation and send appointment alert emails is enabled, appointment owners will receive appointment request emails. The developers are working on deploying a fix schedule for the next calendar update.
 
-## **Appointment Review Request Email & SMS - [Can be disabled]**
+**Appointment Review Request Email & SMS - [Can be disabled]**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189218359/original/Zfqpk9L21fqO1a6BE3-xQ4di5penLhmFgg.png?1644563046)
 
-**Please Note:**
->When sending a review request, the person who is signed in will be the one listed as the sender of that message.
+**Please Note:** When sending a review request, the person who is signed in will be the one listed as the sender of that message.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48252650500/original/a7pwrO-vCEj6bTZ0G_T1PAo_w_QdbBZkSw.png?1663870327)
 
@@ -41,7 +39,7 @@ If you are looking to send a review request from the  contacts assigned user, pl
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48252668276/original/Q102QX57myGSiSXhF_QPjfwzvy1P1rKIFQ.png?1663877655)
   
 
-## Social Planner Reconnect expired token notification email - [Can be disabled]
+### Social Planner Reconnect expired token notification email - [Can be disabled]
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48253062195/original/B_kRBa1B1MtPI1vRxlOyEYdimetXLwFedQ.png?1664178280)
 
@@ -50,10 +48,10 @@ If you are looking to send a review request from the  contacts assigned user, pl
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48253069352/original/yvegNEM8_ctEjA13OkqVlg6bk3-Ft4m3SA.png?1664179997)
 
 **Please Note:**
->When sending a email notification, the person who is signed in will be the one listed as the sender of that message.  
+When sending a email notification, the person who is signed in will be the one listed as the sender of that message.  
 
 
-## New Review Email (Can be disabled)
+### New Review Email (Can be disabled)
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189208813/original/G4qVenOaP3CWDAM6Xa8LK21SGcrUUMz_Zg.png?1644562058)
   
