--- a/Emails/what-is-email-bounce-suspension-and-how-to-avoid-it.mdx
+++ b/Emails/what-is-email-bounce-suspension-and-how-to-avoid-it.mdx
@@ -82,7 +82,7 @@ So if you set up replies.yourcompany.com, you can send from sender_name@company.
 
 **5. Set-up double opt-in**
 
-***To set up double opt-in for future setup, please include a checkbox to ensure the lead gives consent when filling out the form if that's where the leads opt-in:***
+To set up double opt-in for future setup, please include a checkbox to ensure the lead gives consent when filling out the form if that's where the leads opt-in:
 
 You can set up a checkbox like this:
 
