--- a/Payments/ach-debit-payment-method-on-invoices.mdx
+++ b/Payments/ach-debit-payment-method-on-invoices.mdx
@@ -42,7 +42,7 @@ ACH Direct Debit rules require that you first get permission from a customer to 
 **We display this mandate on the payment page for you to allow leads to complete the payment process smoothly**
 
 
-## FAQs
+### FAQs
 
 Can my leads enter bank details manually instead of connecting their bank account?
 
