--- a/Payments/auto-payments-in-recurring-templates.mdx
+++ b/Payments/auto-payments-in-recurring-templates.mdx
@@ -39,14 +39,6 @@ For reference, if the customer makes the payment for the first time on the 4th i
     
 -   The payment will not be processed automatically if any child invoice is updated before deducting the auto-charge. The location user would be informed of the same via mail, and they should share the updated invoice with the end customer to avoid any lost recurring revenue.
 
-| Case | Who should receive the email? |
-|--|--|
-| Auto payment failed | Receiver |
-| Auto payment failed | Sender |
-|Invoice payment success| Sender|
-| Invoice payment success | Receiver |
-| Auto-payment information | Receiver |
-|Child invoice updated |Receiver|
 
 ### What happens if auto-payment fails?
 
@@ -83,7 +75,7 @@ This will open the Auto-payment scheduling modal with the toggle turned ON and t
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48245831218/original/1D6-aru93aKFHnuedU4CVieJX5PT17utCA.png?1660737284)
   
-***Can I turn on auto payments in an ongoing recurring template?***
+**Can I turn on auto payments in an ongoing recurring template?**
 
 Yes, auto-payments can be turned ON on an ongoing recurring template using the manage auto-payments option in the builder.
 
