--- a/Payments/how-to-create-invoices-in-monstro.mdx
+++ b/Payments/how-to-create-invoices-in-monstro.mdx
@@ -13,9 +13,9 @@ In this article, we will cover how to create, edit, discount, add taxes, and sen
 You can now send invoices to your customers/clients using the **products** that you have created in your sub-account.
 
 **Please Note:**
->If you are using invoicing without Stripe Connect please see this guide - Using invoices for recording manual payments without Stripe Connect 
->
->The limitation to using invoicing without Stripe Connect is that the user will need to manually record the payments
+If you are using invoicing without Stripe Connect please see this guide - Using invoices for recording manual payments without Stripe Connect 
+
+The limitation to using invoicing without Stripe Connect is that the user will need to manually record the payments
 
 ### How to create a new invoice.
 
@@ -62,9 +62,9 @@ You can now send invoices to your customers/clients using the **products** that 
 
 **Step 3:**  Click on Add Tax
 
-1.  **Add the name of the Tax**
-2.  **Add rate in %**
-3.  **Add a description or Tax id number**
+1.  Add the name of the Tax
+2.  Add rate in %
+3.  Add a description or Tax id number
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189495624/original/C4Q95tLGsljhjp2mV8Dutw-0HbYCXAY70g.png?1644595622)
 
@@ -101,4 +101,4 @@ You can also look for successful, or failed transactions related to invoices. Yo
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189514063/original/9hVpI6UpRIiXpr4udM0BzxMRzfLRyAmrsw.png?1644598898)
   
 **Notes:**
->**The transaction tab is only available in the new UI**
+The transaction tab is only available in the new UI
