--- a/Social Media Management/how-to-connect-to-your-google-my-business-location.mdx
+++ b/Social Media Management/how-to-connect-to-your-google-my-business-location.mdx
@@ -33,8 +33,8 @@ If you're connecting to any profile for the first time, they ask you to choose t
 ### Step 4: Choose the GMB Locations for the Social Planner
 
 Note:
->**1.** If the GMB location is already added, it will show the message "location already added".
->
->**2.** If the GMB account has more than 10 locations, it will show an error that **"This location belongs to a chain. The Local Post API is disabled for this location".**
+**1.** If the GMB location is already added, it will show the message "location already added".
+
+**2.** If the GMB account has more than 10 locations, it will show an error that **"This location belongs to a chain. The Local Post API is disabled for this location"**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48197298755/original/fu5U6n9gQ7bXMOo3cutGT-fVXBa-6WDJFA.png?1646389163)
