--- a/Social Media Management/how-to-connect-to-your-linkedIn-profile-and-page.mdx
+++ b/Social Media Management/how-to-connect-to-your-linkedIn-profile-and-page.mdx
@@ -15,7 +15,7 @@ description: "Connect the LinkedIn Profile and Pages"
 **Step 3: After clicking the Add LinkedIn Profile/Page(s), there will be an option to add them.**
 
 **Note**
->Make sure that your personal LinkedIn account is a Super admin of the Page you want to add to Social Planner.
+Make sure that your personal LinkedIn account is a Super admin of the Page you want to add to Social Planner.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183051/original/7N8PK_S_BGwrdrEglSRIoBLY0RSmsIafZw.jpeg?1653463966)
 
