--- a/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
+++ b/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
@@ -55,7 +55,6 @@ The recurring posts feature empowers users to take a proactive and automated app
 
 **Celebrating Historical Milestones:**  Museums, historical societies, or educational institutions can use this feature to share historical facts or milestones on the corresponding dates, providing educational content to their followers.
 
-## How to use this feature?
 
 ### How to create a Recurring Post?
 
@@ -66,7 +65,7 @@ The recurring posts feature empowers users to take a proactive and automated app
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155005360578/original/Xtw5Tg6Zo6hR5fa-yntVaJ1FHAAHRA8HYQ.png?1692202257)
 
 **Please Note:**
->On Twitter, this content may be flagged as repetitive when compared to other social media platforms.
+On Twitter, this content may be flagged as repetitive when compared to other social media platforms.
 
 Create a New Post with a Recurring Schedule
 
@@ -124,48 +123,48 @@ If you change the content on the parent post, it will replicate in the child's s
 
 **Experiment and Iterate:**  Recurring posts are a tool, and like any tool, they require experimentation to find the most effective way to use them. Please don't be afraid to try different strategies and iterate based on what you learn.
 
-## FAQs
+### FAQs
 
-### Q: Can I set recurring posts for specific holidays or annual events?
+Q: Can I set recurring posts for specific holidays or annual events?
 
 A: Yes, you can schedule recurring posts for specific dates, allowing you to automate posts for holidays or annual events like company anniversaries.
 
-### Q: What happens if I edit the parent post of a recurring schedule?
+Q: What happens if I edit the parent post of a recurring schedule?
 
 A: Editing the parent post will replicate the changes in child-scheduled posts. However, changes made to individual child posts will not affect the parent posts.
 
-### Q: Can I mix media types, like images and videos, in my recurring posts?
+Q: Can I mix media types, like images and videos, in my recurring posts?
 
 A: Yes, you can include various media types, such as images, videos, or GIFs, within the recurring posts to make them more engaging.
 
-### Q: How does the recurring post feature interact with different time zones?
+Q: How does the recurring post feature interact with different time zones?
 
 A: You'll need to set the time for your recurring posts considering the time zone of your target audience. Be mindful of global audiences if applicable.
 
-### Q: Is there a limit to how far in advance I can schedule recurring posts?
+Q: Is there a limit to how far in advance I can schedule recurring posts?
 
 A: Depending on the specific settings and platform guidelines, you may be able to schedule recurring posts for days, weeks, months, or even years in advance.
 
-### Q: Will Twitter's repetitive content policy affect my recurring posts?
+Q: Will Twitter's repetitive content policy affect my recurring posts?
 
 A: Yes, Twitter might flag recurring posts as repetitive content. It's essential to be mindful of this and create variations in content to comply with Twitter's policies. [Click here](https://help.twitter.com/en/rules-and-policies/copypasta-duplicate-content)  for more details.
 
-### Q: Can I pause or temporarily stop a recurring post series?
+Q: Can I pause or temporarily stop a recurring post series?
 
 A: You cannot pause or temporarily stop a recurring post-series
 
-### Q: What if I want different recurring posts for different social platforms?
+Q: What if I want different recurring posts for different social platforms?
 
 A: You can create unique recurring posts tailored to each social platform using the Customize Each Post functionality, allowing you to align the content with each network's specific character limits and guidelines.
 
-### Q: Can recurring posts be part of a larger campaign with non-recurring content?
+Q: Can recurring posts be part of a larger campaign with non-recurring content?
 
 A: Absolutely! You can integrate recurring posts with other marketing strategies and campaigns to create a cohesive and consistent brand message.
 
-### Q: How can I ensure my recurring posts are accessible to all users, including those with disabilities?
+Q: How can I ensure my recurring posts are accessible to all users, including those with disabilities?
 
 A: Incorporating accessibility features like captions, alt text, and other inclusive practices can make your recurring posts accessible to a broader audience.
 
-### Q: How do I avoid making recurring posts feel too automated or impersonal?
+Q: How do I avoid making recurring posts feel too automated or impersonal?
 
 A: Mixing recurring posts with real-time, personalized content and engaging with your audience can help maintain a human touch in your social media presence.
