--- a/Contacts/getting-started-with-smart-lists.mdx
+++ b/Contacts/getting-started-with-smart-lists.mdx
@@ -6,9 +6,9 @@ description: "Smart Lists: customize, filter, and dynamically update contact dat
 
 Smart Lists are innovative contact lists that allow users to customize and filter contacts based on specific conditions, such as custom fields. You can select which columns to display, and the Smart Lists update in real-time as contact data changes. Moreover, they've been enhanced with advanced conditions that allow the inclusion of contacts added between the time an Email campaign is scheduled and when it's sent out, making it a dynamic and flexible tool for effective campaign management.
 
-[Video Place Holder [https://youtu.be/yRDN8sXt8Iw](https://youtu.be/yRDN8sXt8Iw)]
+[Video Place Holder ]
 
-## **What are Smart Lists?**
+## What are Smart Lists?
 
 Smart Lists are a feature in certain software platforms that provide a dynamic and customizable way to organize and manage contact lists. Rather than static lists, Smart Lists are dynamic and updated in real time based on specific criteria or conditions set by the user. These conditions include certain behaviors, attributes, or custom fields relevant to your contacts.
 
@@ -16,10 +16,10 @@ For example, if you have a contact list for an email campaign, a Smart List coul
 
 These lists can be filtered based on various conditions, allowing you to segment your contacts in the most relevant way to your needs. You can also choose which data columns to display, giving you a customized view of your contact information.
 
-[Video Place Holder [https://youtu.be/F02wf0nko5s](https://youtu.be/F02wf0nko5s)]
-[Video Place Holder [https://youtu.be/kxnGcdTYqFE](https://youtu.be/kxnGcdTYqFE)]
+[Video Place Holder ]
+[Video Place Holder ]
 
-### **Usage Cases:**
+### Usage Cases:
 
 **Marketing Campaign Segmentation:**  With Smart Lists, marketers can better target their audience by creating specific lists based on certain criteria. For instance, a business can create a Smart List of customers who have purchased within the last six months and target them with a new product launch campaign.
 
@@ -35,9 +35,9 @@ These lists can be filtered based on various conditions, allowing you to segment
 
 **Customer Support:**  Smart Lists can help identify customers who have submitted multiple support tickets or have unresolved issues. This allows customer service teams to reach out and improve customer satisfaction proactively.
 
-## **How to use Smart Lists?**
+###How to use Smart Lists?
 
-### **Setting Up a Smart List**
+**Setting Up a Smart List**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155003814896/original/UMMkYlhwX8Va3MdapeZdmSFNmFcHGn4HAw.png?1690453608)
 
@@ -49,7 +49,7 @@ These lists can be filtered based on various conditions, allowing you to segment
 4.  To add more filters, select the “AND” option.
 5.  To permanently save your filter(s) as a list, click “Save as smart list” at the bottom of your screen.
 
-### **Accessing, Adjusting, and Cloning Smart Lists**
+### Accessing, Adjusting, and Cloning Smart Lists
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155003817911/original/DqOZR-7WZDdxInPEMnb8Ta4Uk_UieaeFvg.gif?1690455075)
 
@@ -58,13 +58,12 @@ These lists can be filtered based on various conditions, allowing you to segment
 3.  Select the trash can icon or the X. To modify a filter, click the pencil icon or the dropdown arrow to remove a filter. Use the Save icon to store your changes.
 4.  You can manage your Smart Lists by navigating to "Manage Smart Lists" at the top right of the Contacts page. This area lets you duplicate, share, rename, or erase a Smart List using the icons to the right.
 
-### **How To Filter By Custom Fields**
+### How To Filter By Custom Fields
 
-[Video Place Holder [https://youtu.be/WZYEmlqzZdI](https://youtu.be/WZYEmlqzZdI)]
+[Video Place Holder]
+  
 
-###   
-
-### **Lead nurturing using Smart Lists.**
+### Lead nurturing using Smart Lists.
 
 Create a list of all contacts that have never been or have not been contacted in the last 90 days.
 
@@ -77,60 +76,59 @@ Create a list of all contacts that have never been or have not been contacted in
 5. Click on the column's dropdown. Select the Last Activity column.  
 6. Press the + icon to name & save this list.
 
-## **FAQs**
+### FAQs
 
-### **Q: How do I add pre-existing contacts to an already-made Smart List?**
+**Q: How do I add pre-existing contacts to an already-made Smart List?**
 
 A: Contacts are added automatically to a Smart List if they meet the filter conditions set for that Smart List. For instance, if a Smart List includes all contacts with the "client" tag, any contact tagged as "client" will automatically be added.
 
-###   
 **Q: Can I manually add existing contacts to an existing Smart List?**
 
 A: No, contacts are not manually added to Smart Lists. They are added automatically based on the filters and conditions set for that Smart List. If you add a tag to a contact that matches a filter condition for a Smart List, they will automatically be added to that Smart List.
 
-### **Q: How can I create a Smart List in Contacts when the filter says "Pipeline" instead of "Filter"?**
+**Q: How can I create a Smart List in Contacts when the filter says "Pipeline" instead of "Filter"?**
 
 A: Smart Lists are essentially saved filters. If you wish to create a new one, you should clear the existing filters and add new ones. If you only see "Pipeline", it might be due to a temporary interface issue. Try refreshing the page and attempting the process again.
 
-### **Q: I'm having trouble adding to an existing smart list. When I try to add more people by clicking "and," it keeps zeroing out the list. What could I be doing wrong?**
+**Q: I'm having trouble adding to an existing smart list. When I try to add more people by clicking "and," it keeps zeroing out the list. What could I be doing wrong?**
 
 A: The issue you're experiencing might be related to the filters set for the smart list. Smart lists automatically include contacts that match the set filters. If you're trying to add contacts based on a specific attribute, such as a batch ID, ensure that attribute is included in your smart list filters. If you're still experiencing problems, a useful workaround can be to tag all the contacts you want to include, change the filter to match that tag and add contacts to the list. This way, all the contacts that share the tag will automatically be included in the smart list.
 
-### **Q: I deleted a contact and didn't want to see the related smart list. Is there a way to delete all records from the smart list?**
+**Q: I deleted a contact and didn't want to see the related smart list. Is there a way to delete all records from the smart list?**
 
-[Video Place Holder https://www.loom.com/share/dcb5291eb22d49b7b7007c51b23b4f11?sid=f75f0bd4-fda4-4b1c-bad8-9d81db158559]
+[Video Place Holder]
 
 A: You can delete a Smart List by going to the "Manage Smart Lists" tab. However, remember that the delete option might be greyed out if a Smart list is shared with only one user. To delete such a list, you need to first untick the user. Once the user is unticked, the delete option will become available, and you can delete the smart list.
 
-### **Q: Can I use a Smart List to create a report for conversions from a specific tag within the contacts?**
+**Q: Can I use a Smart List to create a report for conversions from a specific tag within the contacts?**
 
 A: Currently, you can create a smart list by filtering based on that specific tag, and this list can be exported as a CSV. However, viewing conversion rates for a specific list is not directly possible. Conversion rates can only be seen from pipeline statuses marked as WON on the dashboard or from adding a source to pipeline cards and seeing the lead source reporting area at the bottom of the dashboard.
 
-### **Q: Should agency admins be able to see all smart lists even if they haven't been shared with them?**
+**Q: Should agency admins be able to see all smart lists even if they haven't been shared with them?**
 
 A: As of the last update, this option was unavailable to the agency admins. HighLevel was working on user permissions & role-based access at a granular level, and this feature has been added to the roadmap. However, as an agency admin, there's currently no workaround if you cannot view a smart list created by a user and not shared with you.
 
-### **Q Can a user delete a smart list they've created if they don't have access to 'manage smart lists'?**
+**Q Can a user delete a smart list they've created if they don't have access to 'manage smart lists'?**
 
 A: The only way the smart list can be deleted is to provide the end user with "Contact" page access. They can then go to manage Smartlist and delete it. If the user is not supposed to view contacts data, they can be enabled with "only assigned data" from the permission level and provide contact page access.
 
-### **Q Can users manage smart lists without having 'settings' access?**
+**Q Can users manage smart lists without having 'settings' access?**
 
 A: Users cannot manage their smart lists without having 'settings' access. This issue has been added to HighLevel's roadmap for future updates.
 
-### **Q: Is there a way to see who created and shared a smart list?**
+**Q: Is there a way to see who created and shared a smart list?**
 
 A: HighLevel does not log information about who created and shared a smart list.
 
-### **Q: Can all users see Smart Lists or just the user that created them?**
+**Q: Can all users see Smart Lists or just the user that created them?**
 
 A:  Smart Lists are created at the user level, not at the location level. However, with "global versus local" Smart Lists, users can now push their Smart Lists to the full account, making them visible to all users.
 
-### **Q: Can Smart Lists be transferred between accounts or moved into a snapshot?**
+**Q: Can Smart Lists be transferred between accounts or moved into a snapshot?**
 
 A:  As of the time of writing, no feature allows moving Smart Lists from one account to another or importing them into a snapshot.  
 
-### **Q: Can Smart Lists be shared with others?**
+**Q: Can Smart Lists be shared with others?**
 
 A:  Yes, you can share Smart Lists. Go to 'Manage Smart Lists' and click the 'share' button to do this.
 
